2006-05-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* host/bulk-boundaries.tcl(New): test bulk transfers at
	boundary cases.
	* doc/usbs.sgml: Documentation of bulk-boundaries.tcl test.

2006-04-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/usbs-testing.html: Correct "format" for "data" when
	specifiying what the data in the USB message will contain.

2006-04-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* host/usbhost.c (tcl_run): Fix compiler warnings
	* host/usbhost.c (pool_function): sem_wait can exit with a
	EINTR. If so loop and try again.

	* host/usbchmod.c (usb_scan_devices) propergate previous fix from
	usbhost.c

2006-04-16  Frank Pagliughi <fpagliughi@mindspring.com>

	*host/usbhost.c (usb_scan_devices) Fix parsing EOL for FC4 and
	others.

2006-03-10  Bart Veer  <bartv@ecoscentric.com>

	* src/usbs.c (usbs_devtab_cwrite, usbs_devtab_cwrite): add
	DSR locking

2005-06-26  Bart Veer  <bartv@ecoscentric.com>

	* host/usbhost.c, host/configure.in: cope with incompatible
	changes to the system header <linux/usbdevice_fs.h>

	* host/acconfig.h: new file to support the above

	* host/Makefile.in, host/aclocal.m4, host/config.h.in,
	host/configure, host/stamp-h.in: regenerate

2003-03-27  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.am, host/Makefile.in:
	$(bindir) may not exist yet, so create it if necessary.

2003-02-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/usbs.sgml: Declare as <part> not <reference> to get
	correct TOC numbering.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/usbs.cdl: Update doc links.

	* doc/usbs.sgml: Comment out DOCTYPE for now to allow building
	with standard doc build.

2003-02-12  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.in, host/configure:
	Regenerate after toplevel acinclude.m4 update

2002-09-23  Bart Veer  <bartv@ecoscentric.com>

	* host/configure.in:
	Only build if the required Linux kernel support is present.

2002-09-21  Bart Veer  <bartv@ecoscentric.com>

	* host/usbhost.c: